fl_dll/library.h

extern int passChars(char* fillThis, int sizemax);
struct PassingData
{
    int s_int;
    long long s_long;
    float s_float;
    double s_double;
};
struct ComplexPassing
{
    int s_ID;
    struct PassingData s_passingData;
    struct PassingData* s_ptrPassingData;
    char* s_string;
};
struct PassingArrays
{
    double s_double[5];
    long long s_long[8];
    long long s_doublePtrCount;
    double* s_doublePtr;
    long long s_longPtrCount;
    long long* s_longPtr;
};
struct PassMemoryBlock
{
    char *data;
    int data_size;
};
extern double passStruct(struct PassingData* data);
extern double passComplex(struct ComplexPassing* complex);
extern double passStructWithArrays(struct PassingArrays* structWithArrays);
extern void passMemoryBlock(struct PassMemoryBlock* memoryBlock);
typedef int (*callbackFN) (int, double);
extern int call_CB(callbackFN fn, int, double);
typedef int (*callbackFNArr) (int*, int);
extern void call_CBArr(callbackFNArr fn, int*, int);
void* PassPointers(void* hMem);