src/test/java/jpassport/test/extracted/library_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int passChars(char *fillThis, int sizemax)
     * }
     */
    public static MethodHandle passChars$handle() {
        return passChars.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int passChars(char *fillThis, int sizemax)
     * }
     */
    public static MemorySegment passChars$address() {
        return passChars.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int passChars(char *fillThis, int sizemax)
     * }
     */
    public static int passChars(MemorySegment fillThis, int sizemax) {
        var mh$ = passChars.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("passChars", fillThis, sizemax);
            }
            return (int)mh$.invokeExact(fillThis, sizemax);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class passStruct {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_DOUBLE,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("passStruct");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern double passStruct(struct PassingData *data)
     * }
     */
    public static FunctionDescriptor passStruct$descriptor() {
        return passStruct.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern double passStruct(struct PassingData *data)
     * }
     */
    public static MethodHandle passStruct$handle() {
        return passStruct.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern double passStruct(struct PassingData *data)
     * }
     */
    public static MemorySegment passStruct$address() {
        return passStruct.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern double passStruct(struct PassingData *data)
     * }
     */
    public static double passStruct(MemorySegment data) {
        var mh$ = passStruct.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("passStruct", data);
            }
            return (double)mh$.invokeExact(data);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class passComplex {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_DOUBLE,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("passComplex");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern double passComplex(struct ComplexPassing *complex)
     * }
     */
    public static FunctionDescriptor passComplex$descriptor() {
        return passComplex.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern double passComplex(struct ComplexPassing *complex)
     * }
     */
    public static MethodHandle passComplex$handle() {
        return passComplex.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern double passComplex(struct ComplexPassing *complex)
     * }
     */
    public static MemorySegment passComplex$address() {
        return passComplex.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern double passComplex(struct ComplexPassing *complex)
     * }
     */
    public static double passComplex(MemorySegment complex) {
        var mh$ = passComplex.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("passComplex", complex);
            }
            return (double)mh$.invokeExact(complex);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class passStructWithArrays {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_DOUBLE,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("passStructWithArrays");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern double passStructWithArrays(struct PassingArrays *structWithArrays)
     * }
     */
    public static FunctionDescriptor passStructWithArrays$descriptor() {
        return passStructWithArrays.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern double passStructWithArrays(struct PassingArrays *structWithArrays)
     * }
     */
    public static MethodHandle passStructWithArrays$handle() {
        return passStructWithArrays.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern double passStructWithArrays(struct PassingArrays *structWithArrays)
     * }
     */
    public static MemorySegment passStructWithArrays$address() {
        return passStructWithArrays.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern double passStructWithArrays(struct PassingArrays *structWithArrays)
     * }
     */
    public static double passStructWithArrays(MemorySegment structWithArrays) {
        var mh$ = passStructWithArrays.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("passStructWithArrays", structWithArrays);
            }
            return (double)mh$.invokeExact(structWithArrays);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class passMemoryBlock {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("passMemoryBlock");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void passMemoryBlock(struct PassMemoryBlock *memoryBlock)
     * }
     */
    public static FunctionDescriptor passMemoryBlock$descriptor() {
        return passMemoryBlock.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void passMemoryBlock(struct PassMemoryBlock *memoryBlock)
     * }
     */
    public static MethodHandle passMemoryBlock$handle() {
        return passMemoryBlock.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void passMemoryBlock(struct PassMemoryBlock *memoryBlock)
     * }
     */
    public static MemorySegment passMemoryBlock$address() {
        return passMemoryBlock.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void passMemoryBlock(struct PassMemoryBlock *memoryBlock)
     * }
     */
    public static void passMemoryBlock(MemorySegment memoryBlock) {
        var mh$ = passMemoryBlock.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("passMemoryBlock", memoryBlock);
            }
            mh$.invokeExact(memoryBlock);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class call_CB {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_INT,
            library_h.C_POINTER,
            library_h.C_INT,
            library_h.C_DOUBLE
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("call_CB");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int call_CB(callbackFN fn, int, double)
     * }
     */
    public static FunctionDescriptor call_CB$descriptor() {
        return call_CB.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int call_CB(callbackFN fn, int, double)
     * }
     */
    public static MethodHandle call_CB$handle() {
        return call_CB.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int call_CB(callbackFN fn, int, double)
     * }
     */
    public static MemorySegment call_CB$address() {
        return call_CB.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int call_CB(callbackFN fn, int, double)
     * }
     */
    public static int call_CB(MemorySegment fn, int x1, double x2) {
        var mh$ = call_CB.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("call_CB", fn, x1, x2);
            }
            return (int)mh$.invokeExact(fn, x1, x2);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class call_CBArr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            library_h.C_POINTER,
            library_h.C_POINTER,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("call_CBArr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void call_CBArr(callbackFNArr fn, int *, int)
     * }
     */
    public static FunctionDescriptor call_CBArr$descriptor() {
        return call_CBArr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void call_CBArr(callbackFNArr fn, int *, int)
     * }
     */
    public static MethodHandle call_CBArr$handle() {
        return call_CBArr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void call_CBArr(callbackFNArr fn, int *, int)
     * }
     */
    public static MemorySegment call_CBArr$address() {
        return call_CBArr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void call_CBArr(callbackFNArr fn, int *, int)
     * }
     */
    public static void call_CBArr(MemorySegment fn, MemorySegment x1, int x2) {
        var mh$ = call_CBArr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("call_CBArr", fn, x1, x2);
            }
            mh$.invokeExact(fn, x1, x2);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class PassPointers {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_POINTER,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("PassPointers");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * byte []PassPointers(byte []hMem)
     * }
     */
    public static FunctionDescriptor PassPointers$descriptor() {
        return PassPointers.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * byte []PassPointers(byte []hMem)
     * }
     */
    public static MethodHandle PassPointers$handle() {
        return PassPointers.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * byte []PassPointers(byte []hMem)
     * }
     */
    public static MemorySegment PassPointers$address() {
        return PassPointers.ADDR;
    }
